force-app/main/default/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>ACAD_Year__c</fullName>
        <label>ACAD Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APST_Standards__c</fullName>
        <label>APST Standards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <description>Abbreviation for the course</description>
        <label>Abbreviation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <label>Admission Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Australian_Accreditation__c</fullName>
        <label>Australian Accreditation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Broad_Area_Of_Study__c</fullName>
        <description>this field has a trigger associated with it, that replaces the standard field for import \n with ; so it complies with format required.</description>
        <label>Broad Area of Study</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broad_Area_of_Study_Import_Field__c</fullName>
        <description>this field is used for import mapping - trigger will then convert into the multi-select picklist field.</description>
        <label>Broad Area of Study Import Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRICOS__c</fullName>
        <label>CRICOS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_unit_code__c</fullName>
        <description>This field is used by the RES team to identify which teaching assist/staff taught which PD course and thus handle the salary payment.</description>
        <inlineHelpText>Callista unit code used by RES Team for PD Courses</inlineHelpText>
        <label>Callista unit code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Outlook__c</fullName>
        <label>Career Outlook</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concession_Fee__c</fullName>
        <label>Concession Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Used to force uniqueness on course code. Updated from workflow.</description>
        <externalId>true</externalId>
        <label>Course Code Unique</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <externalId>true</externalId>
        <label>Course Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Detail_Page__c</fullName>
        <description>Link to the course details page on the website</description>
        <inlineHelpText>This should contain the url of the course details page on the faculty website</inlineHelpText>
        <label>Course Detail Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Course_Full_Description__c</fullName>
        <description>This field created to enhance course search in offline registration. With this field, user can search either course code or course name</description>
        <formula>Name &amp; &quot; &quot; &amp;  Course_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Full Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level__c</fullName>
        <formula>if ( CONTAINS (Course_Description__c, &quot;Bachelor&quot;) , &quot;UG&quot; , 
if ( CONTAINS (Course_Description__c, &quot;Master&quot;), &quot;PG&quot;, 
if ( TEXT(Managing_Faculty__c) = &quot;PPA&quot;, &quot;Monash College - Non Award&quot;,&quot;Unknown&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check &quot;Course Description&quot; and select UG, PG or Unknown AND if Course Description is empty and Managing Faculty is PPA, then select Monash Collage - Non Award</inlineHelpText>
        <label>Course Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the parent course master to group all courses with the same Course Code</description>
        <label>Course Master</label>
        <referenceTo>Course_Master__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_field_comparison__c</fullName>
        <formula>IF(Name ==  Course_Code__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course field comparison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depreciated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, then the course is no longer offered. This field is used to filter what is available from the &apos;Add Interest&apos; action on enquiry.</description>
        <label>Depreciated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_FT__c</fullName>
        <label>Duration_FT</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date for the course</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry date for the course</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty_Code__c</fullName>
        <label>Faculty Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Description__c</fullName>
        <externalId>true</externalId>
        <label>Faculty Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Faculty record (via Org Unit)</description>
        <label>Faculty</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Account.Callista_Org_Unit_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Faculty</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Monash Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FormstackURL__c</fullName>
        <label>FormstackURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIG_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Global immersion guarantee approved course. See GIG Note field for Unitset titles that will exclude selection.</description>
        <inlineHelpText>Denotes a course that is available for GIG selection</inlineHelpText>
        <label>GIG Eligible Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GIG_Note__c</fullName>
        <description>Lists unitset titles that will invalidate this course from GIG selection.</description>
        <inlineHelpText>Lists unitset titles that will invalidate this course from GIG selection.</inlineHelpText>
        <label>GIG Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <label>GL Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_of_Attendance__c</fullName>
        <label>Hours of Attendance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the course is inactive</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Accreditation__c</fullName>
        <label>International Accreditation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Selective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Run_Code__c</fullName>
        <label>Job Run Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Course_ID__c</fullName>
        <label>Legacy Course ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Description__c</fullName>
        <label>Level Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate Other</fullName>
                </value>
                <value>
                    <fullName>Graduate Preservice</fullName>
                </value>
                <value>
                    <fullName>Non award</fullName>
                </value>
                <value>
                    <fullName>Postgraduate</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <label>Managing Faculty/School/Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>Faculty of Art, Design &amp; Architecture</fullName>
                </value>
                <value>
                    <fullName>Faculty of Arts</fullName>
                </value>
                <value>
                    <fullName>Faculty of Business &amp; Economics</fullName>
                </value>
                <value>
                    <fullName>Faculty of Education</fullName>
                </value>
                <value>
                    <fullName>Faculty of Engineering</fullName>
                </value>
                <value>
                    <fullName>Faculty of Information Technology</fullName>
                </value>
                <value>
                    <fullName>Faculty of Law</fullName>
                </value>
                <value>
                    <fullName>Faculty of Medicine, Nursing &amp; Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Faculty of Pharmacy &amp; Pharmaceutical Sciences</fullName>
                </value>
                <value>
                    <fullName>Faculty of Science</fullName>
                </value>
                <value>
                    <fullName>Monash Centre for Professional Development</fullName>
                </value>
                <value>
                    <fullName>Monash College</fullName>
                </value>
                <value>
                    <fullName>Monash College Diplomas</fullName>
                </value>
                <value>
                    <fullName>Monash Injury Research Institute</fullName>
                </value>
                <value>
                    <fullName>Monash Sustainable Development Institute</fullName>
                </value>
                <value>
                    <fullName>Monash University English Language Centre</fullName>
                </value>
                <value>
                    <fullName>Monash University Foundation Year</fullName>
                </value>
                <value>
                    <fullName>Monash University Foundation Year MUFY</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>School of Clinical Sciences (SCS)</fullName>
                </value>
                <value>
                    <fullName>Monash Centre for Health Research and Implementation (MCHRI)</fullName>
                </value>
                <value>
                    <fullName>MNHS Student Academic Support Unit (SASU)</fullName>
                </value>
                <value>
                    <fullName>The School of Public Health and Preventive Medicine (SPHPM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mapped_Browse_Categories__c</fullName>
        <description>this is populated by apex trigger, which looks at browse category to area of study map sobject.</description>
        <label>Mapped Browse Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mapped_Categories__c</fullName>
        <description>this is used to migrate long text field info over to a multiselect post import so we can use it in dynamic soql queries.</description>
        <label>Mapped Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_and_Location__c</fullName>
        <label>Mode and Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Award_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System Field 

Used by application submission to specify a NON-AWARD application type. This allows the unit details field (text) to be displayed din Callista).</description>
        <label>Non Award Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_ID__c</fullName>
        <externalId>true</externalId>
        <label>Original ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Faculty_Code__c</fullName>
        <description>Code for partner faculty managing the course.</description>
        <label>Partner Faculty Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Faculty_Description__c</fullName>
        <description>Text describing partner faculty for the course</description>
        <label>Partner Faculty Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Partner Faculty account (via Partner org unit)</description>
        <label>Partner Faculty</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Account.Callista_Org_Unit_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Faculty</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Monash Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses (Partner Faculty)</relationshipLabel>
        <relationshipName>Partner_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <description>This is the amount received from Course Offerings related to the Course</description>
        <label>Payment Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Refund__c</fullName>
        <label>Payment Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Total__c</fullName>
        <formula>Payment_Received__c +  Payment_Refund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_requisite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PRODEV-45: Applications - Staff to validate pre-requisite fulfilment</description>
        <inlineHelpText>Indicates if the course has pre-requisites</inlineHelpText>
        <label>Pre-requisite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Review date for the course</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Marketing_Description__c</fullName>
        <label>Short Marketing Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <description>Course short title</description>
        <label>Short Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialisation_Code__c</fullName>
        <label>Specialisation Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialisation__c</fullName>
        <externalId>true</externalId>
        <label>Specialisation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Course start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Course is Active ? Active/Inactive</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Level_Description__c</fullName>
        <label>Sub Level Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Level__c</fullName>
        <description>Course Sub-Level e.g. PG Diploma, PG Certificate, etc</description>
        <label>Sub Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PG Diploma</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>78</fullName>
                </value>
                <value>
                    <fullName>77</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>76</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>06G</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>07PG</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>09-1</fullName>
                </value>
                <value>
                    <fullName>09-4</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>07G</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>06PG</fullName>
                </value>
                <value>
                    <fullName>50PG</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>56</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teach_Out_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when the course code is being retired. Maintained in Callista - course category.</description>
        <inlineHelpText>Set to true when the course code is being retired.</inlineHelpText>
        <label>Teach Out Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Course full title</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of course being offered</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic_Course</fullName>
                    <label>Academic Course</label>
                </value>
                <value>
                    <fullName>Short_Course</fullName>
                    <label>Professional Development</label>
                </value>
                <value>
                    <fullName>Course-All</fullName>
                </value>
                <value>
                    <fullName>Unit Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_Course_Duration__c</fullName>
        <label>Course Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>Active_Faculty_of_Education_PD</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Fee__c</columns>
        <columns>Concession_Fee__c</columns>
        <columns>Fund__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Level__c</columns>
        <columns>Payment_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managing_Faculty__c</field>
            <operation>equals</operation>
            <value>Faculty of Education</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short_Course,Short Course</value>
        </filters>
        <label>Active - Faculty of Education (PD)</label>
        <sharedTo>
            <role>Education_Short_Courses_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Faculty_of_Medicine_Nursi_PD</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Fee__c</columns>
        <columns>Concession_Fee__c</columns>
        <columns>Fund__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managing_Faculty__c</field>
            <operation>equals</operation>
            <value>&quot;Faculty of Medicine, Nursing &amp; Health Sciences&quot;</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short_Course,Short Course</value>
        </filters>
        <label>Active - Faculty of Medicine, Nursi (PD)</label>
        <sharedTo>
            <role>Medicine_Short_Courses_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Specialisation__c</columns>
        <columns>Level__c</columns>
        <columns>Managing_Faculty__c</columns>
        <columns>Inactive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Faculty_of_Arts_PD</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Fee__c</columns>
        <columns>Concession_Fee__c</columns>
        <columns>Fund__c</columns>
        <columns>GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managing_Faculty__c</field>
            <operation>equals</operation>
            <value>Faculty of Arts</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short_Course,Short Course</value>
        </filters>
        <label>All - Faculty of Arts (PD)</label>
        <sharedTo>
            <role>Arts_Short_Courses_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Faculty_of_Bus_Eco_PD</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Fee__c</columns>
        <columns>Concession_Fee__c</columns>
        <columns>Fund__c</columns>
        <columns>GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managing_Faculty__c</field>
            <operation>equals</operation>
            <value>Faculty of Business &amp; Economics</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short_Course,Short Course</value>
        </filters>
        <label>All - Faculty of Bus. Eco. (PD)</label>
        <sharedTo>
            <role>BusEco_Short_Courses_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Faculty_of_Education_PD</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Fee__c</columns>
        <columns>Concession_Fee__c</columns>
        <columns>Fund__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Callista_unit_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managing_Faculty__c</field>
            <operation>equals</operation>
            <value>Faculty of Education</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>PDD</value>
        </filters>
        <label>All - Faculty of Education (PD)</label>
        <sharedTo>
            <role>Education_Short_Courses_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Faculty_of_Medicine_PD</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Fee__c</columns>
        <columns>Concession_Fee__c</columns>
        <columns>Fund__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Cost_Centre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managing_Faculty__c</field>
            <operation>equals</operation>
            <value>&quot;Faculty of Medicine, Nursing &amp; Health Sciences&quot;</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short_Course,Short Course</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All - Faculty of Medicine (PD)</label>
        <sharedTo>
            <role>Medicine_Short_Courses_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MSDI_PD</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Fee__c</columns>
        <columns>Concession_Fee__c</columns>
        <columns>Fund__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Cost_Centre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managing_Faculty__c</field>
            <operation>equals</operation>
            <value>Monash Sustainable Development Institute</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Short_Course,Short Course</value>
        </filters>
        <label>All - MSDI (PD)</label>
        <sharedTo>
            <role>MSDI_Short_Courses_Team</role>
        </sharedTo>
    </listViews>
</CustomObject>